# cpp-python-wrapper

./: CMakeLists.txt  README.md
cpp/: CMakeLists.txt
cpp/include/: automobile
cpp/include/automobile_bits/: motor.hpp
cpp/src/: motor.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/src/: test.cpp
